site/docs/v0.3/index.md
# Element Language Specification
### Revision 0.3 — Working Draft

---

## Sections

- [[1-core-philosophy-architecture]] - 1. Core Philosophy & Architecture
- [[2-syntax-fundamentals]] - 2. Syntax Fundamentals
- [[3-declarations-bindings-attributes]] - 3. Declarations, Bindings & Attributes
- [[4-thunk-semantics-lazy-evaluation]] - 4. Thunk Semantics & Lazy Evaluation
- [[5-value-groups-destructuring]] - 5. Value Groups & Destructuring
- [[6-type-system]] - 6. Type System
- [[7-traits-extend-implementations]] - 7. Traits, extend & Implementations
- [[8-the-type-primitive-reflection]] - 8. The Type Primitive & Reflection
- [[9-function-syntax-lambdas]] - 9. Function Syntax & Lambdas
- [[10-pattern-matched-functions-blocks]] - 10. Pattern-Matched Functions — [] Blocks
- [[11-pattern-matching-control-flow]] - 11. Pattern Matching & Control Flow
- [[12-generics]] - 12. Generics
- [[13-pipe-operators-data-flow]] - 13. Pipe Operators & Data Flow
- [[14-partial-application]] - 14. Partial Application
- [[15-operator-system]] - 15. Operator System
- [[16-standard-combinators]] - 16. Standard Combinators
- [[17-error-handling]] - 17. Error Handling
- [[18-the-use-keyword-callback-flattening]] - 18. The use Keyword — Callback Flattening
- [[19-dot-access-model]] - 19. Dot Access Model
- [[20-metaprogramming-pipeline]] - 20. Metaprogramming Pipeline
- [[21-concurrency-model-outline-full-spec-pending]] - 21. Concurrency Model *(Outline — Full Spec Pending)*
- [[22-build-system-tooling]] - 22. Build System & Tooling
- [[23-low-level-control]] - 23. Low-Level Control
- [[24-open-not-yet-specified]] - 24. Open / Not Yet Specified

## Original Single-File Document

- [[whole-docs]]
