site/docs/v0.5/index.md
# Element Language Specification
### Revision 0.5.0 - Working Draft

---

## Sections

- [[1-core-philosophy-architecture]] - 1. Core Philosophy & Architecture
- [[2-syntax-fundamentals]] - 2. Syntax Fundamentals
- [[3-declarations-bindings-attributes]] - 3. Declarations, Bindings & Attributes
- [[4-thunk-semantics-lazy-evaluation]] - 4. Thunk Semantics & Lazy Evaluation
- [[5-value-groups-destructuring]] - 5. Value Groups & Destructuring
- [[6-type-system]] - 6. Type System
- [[7-traits-extend-implementations]] - 7. Traits, extends & Implementations
- [[8-the-type-primitive-reflection]] - 8. The Type Primitive & Reflection
- [[9-function-syntax-lambdas]] - 9. Function Syntax & Lambdas
- [[10-pattern-matched-functions-blocks]] - 10. Pattern-Matched Functions - [] Blocks
- [[11-pattern-matching-control-flow]] - 11. Pattern Matching & Control Flow
- [[12-generics]] - 12. Generics
- [[13-pipe-operators-data-flow]] - 13. Pipe Operators & Data Flow
- [[14-partial-application]] - 14. Partial Application
- [[15-notation-system]] - 15. Notation System
- [[16-std-functional]] - 16. std.functional
- [[17-error-handling]] - 17. Error Handling
- [[18-the-use-keyword-callback-flattening]] - 18. The use Keyword - Callback Flattening
- [[19-dot-access-model]] - 19. Dot Access Model
- [[20-metaprogramming-pipeline]] - 20. Metaprogramming Pipeline
- [[21-concurrency-model-outline-full-spec-pending]] - 21. Concurrency Model *(Outline - Full Spec Pending)*
- [[22-modules-packages-visibility]] - 22. Modules, Packages & Visibility
- [[23-initializers-build-cli]] - 23. Initializers, Build System & CLI
- [[24-low-level-control]] - 24. Low-Level Control
- [[25-kinds-higher-kinded-types]] - 25. Kinds & Higher-Kinded Types
- [[open-questions]] - Open Questions
- [[changelog]] - Changelog
